# test-hae-llama

./: .env_test  .gemini  .gemini.md  .gitignore  .tool-versions  CONTRIBUTING.md  GEMINI.md  README.md  batch_generate.sh  batch_summary.txt  build.gradle  commands.txt  debug_gemini_prompt.xml  debug_output.txt  interaction.txt  latest_interaction.txt  mise.toml  opencode_response.xml  pyproject.toml  requirements.txt  settings.gradle  test_response.txt  test_stdin.txt  verify-ollama-cloud.js  verify_fix.sh
.github/: PULL_REQUEST_TEMPLATE.md
.serena/: project.yml
batch_logs/: AiService.java.txt  AsyncConfig.java.txt  BankClient.java.txt  EmailClientImpl.java.txt  GlobalExceptionHandler.java.txt  HelloService.java.txt  NotificationService.java.txt  OrderEventListener.java.txt  OrderPlacedEvent.java.txt  PaymentRepositoryImpl.java.txt  PayrollService.java.txt  ProductController.java.txt  ProductRepositoryCustom.java.txt  ProductRepositoryImpl.java.txt  ProductResponse.java.txt  ProductService.java.txt  SmsClient.java.txt  SmsClientImpl.java.txt  UserCreatedEvent.java.txt  UserEventListener.java.txt
common/: .classpath  build.gradle  debug_opencode_prompt.xml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
engine-java/: build.gradle
intellij-plugin/: .classpath  .project  build.gradle  build.gradle.kts
sample-project/: .gitignore  IMPROVEMENT_PLAN.md  TEST_GENERATION_SCENARIO.md  build.gradle  pom.xml  tmp_rag_engine_7b.py
src/: dependency.py  ingest.py  main.py  mcp_client.py  rag_engine.py  test_fix.py  utils.py
(+477 files in other folders)
